typescript/checker/tests/conformance/es6/Symbols/symbolProperty48.ts.stderr
error: TS2585 {
    span: Span {
        lo: BytePos(
            71,
        ),
        hi: BytePos(
            77,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty48.ts:6:10
  |
6 |         [Symbol.iterator]() { }
  |          ^^^^^^

